# libdnssd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml
examples/src/: main.rs
src/: discovery_handler.rs  dns.rs  hex.rs  lib.rs  main.rs  sender.rs  socket.rs
src/dnssd/: discovery_handler.rs  discovery_thread.rs  dns.rs  dnssd_error.rs  mod.rs  receiver.rs  sender.rs  socket.rs  threadtimeout.rs
src/mdns/: dns.rs  mdns_error.rs  mod.rs  socket.rs
