[package]
name = "libdnssd"
version = "1.0.0"
edition = "2021"
authors = ["Mikael Sahlström <mick.sahlstrom@gmail.com>"]
license = "MIT"
repository = "https://github.com/mikaelsahlstrom/libdnssd"

[dependencies]
socket2 = { version = "0.5.5", features = ["all"] }
lazy_static = "1.4.0"
default-net = "0.21.0"
log = "0.4.20"

[dev-dependencies]
env_logger = "0.10.1"
